# haggl

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
resources/: app-diagrams.drawio
src/: lib.rs  main.rs  types.rs
src/actors/: brokers.rs  mod.rs
src/actors/exchange_feeds/: binance.rs  mod.rs
src/commands/: inspect.rs  mod.rs
src/commands/gui/: app.rs  mod.rs
