[package]
name = "haggl"
version = "0.1.0"
edition = "2021"
authors = ["Norman Ives <norman.ives@gmail.com>"]
license = "MIT"
readme = "README.md"
description = "Ingest and visualise market data feeds"
keywords = ["crypto", "data", "market-data", "trading"]
categories = ["finance", "visualization"]
repository = "https://github.com/eyevz/haggl"
homepage = "https://github.com/eyevz/haggl"
documentation = "https://github.com/eyevz/haggl"

[dependencies]
clap = { version = "4.4.4", features = ["derive"] }
awc = { version = "3.2.0", features = ["rustls"] }
actix = "0.13.1"
actix-codec = "0.5.1"
futures = "0.3.28"
serde = { version = "1.0.188", features = ["serde_derive"] }
serde_json = "1.0.107"
chrono = "0.4.31"
anyhow = "1.0.75"
egui = "0.23.0"
eframe = { version = "0.23.0", default-features = false, features = ["glow"] }
egui_plot = "0.23.0"
